// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply external "styles.container" prop 1`] = `
.emotion-0 {
  color: red;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  word-break: break-word;
  white-space: normal;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    Header
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  word-break: break-word;
  white-space: normal;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    Header
  </div>
</div>
`;
